modules/security-groups/main.tf
resource "aws_security_group" "ec2_ssh_sg" {
  name   = "${var.name}-ec2-ssh-sg"
  vpc_id = var.vpc_id

  ingress {
    description = "Allow ssh connection"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.name}-ec2-ssh-sg"
    Terraform   = "true"
    Environment = "dev"
  }
}

resource "aws_security_group" "ec2_web_sg" {
  name   = "${var.name}-ec2-web-sg"
  vpc_id = var.vpc_id

  ingress {
    description = "allow port 8080 for jenkins instance"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.name}-ec2-web-sg"
    Terraform   = "true"
    Environment = "dev"
  }
}
